compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__externals__erlang_only_function_used_by_javascript_module.snap
---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 28
expression: "@external(erlang, \"one\", \"two\")\nfn erlang_only() -> Int\n\npub fn main() {\n  erlang_only()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
@external(erlang, "one", "two")
fn erlang_only() -> Int

pub fn main() {
  erlang_only()
}


----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   erlang_only()
  │   ^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
