compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__externals__erlang_targeted_function_cant_contain_javascript_only_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 143
expression: "@target(erlang)\npub fn erlang_only() -> Int {\n  javascript_only()\n}\n\n@external(javascript, \"one\", \"two\")\nfn javascript_only() -> Int\n    "
snapshot_kind: text
---
----- SOURCE CODE
@target(erlang)
pub fn erlang_only() -> Int {
  javascript_only()
}

@external(javascript, "one", "two")
fn javascript_only() -> Int
    

----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   javascript_only()
  │   ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
