compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__externals__imported_javascript_only_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 162
expression: "import module\npub fn main() {\n  module.javascript_only()\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- module.gleam
@external(javascript, "one", "two")
pub fn javascript_only() -> Int

-- main.gleam
import module
pub fn main() {
  module.javascript_only()
}

----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:3:10
  │
3 │   module.javascript_only()
  │          ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
