compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__externals__public_erlang_external.snap
---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 208
expression: "@external(erlang, \"one\", \"two\")\npub fn main() -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE
@external(erlang, "one", "two")
pub fn main() -> Int


----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn main() -> Int
  │ ^^^^^^^^^^^^^

The `main` function is public but doesn't have an implementation for the
JavaScript target. All public functions of a package must be able to
compile for a module to be valid.
